--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "echarts": "^4.7.0",
+    "element-ui": "^2.13.0",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.6"
+    "vue-quill-editor": "^3.0.6",
+    "vue-router": "^3.1.6",
+    "vue-table-with-tree-grid": "^0.2.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.0",
@@ -19,6 +26,7 @@
     "@vue/cli-service": "^4.3.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-component": "^1.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
